--- a/src/app/visitor/v-resident/v-r-view/v-r-view.component.scss
+++ b/src/app/visitor/v-resident/v-r-view/v-r-view.component.scss
@@ -269,11 +269,19 @@ div#list-main {
 div#qr-container {
     display: none;
     position: absolute;
-    height: 80vh;
+    height: 90vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
     text-align: center;
+
+    @include xs-width-max {
+        margin-top: -30px;
+    }
+
+    @include lg-width-max {
+        padding-top: 80px;
+    }
 
     canvas#qrcode {
         margin-top: 100px;
